some shedskin fixes

--- a/src/shedskin/Makefile
+++ b/src/shedskin/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CCFLAGS=-O2 -msse2 -fomit-frame-pointer -pipe -Wno-deprecated $(CPPFLAGS) -I. -I/usr/local/lib/python2.6/dist-packages/shedskin/lib
+CCFLAGS=-O2 -msse2 -fomit-frame-pointer -pipe -Wno-deprecated $(CPPFLAGS) -I. -I/usr/local/lib/python2.6/dist-packages/shedskin/lib -D__SS_NOWRAP -D__SS_NOBOUNDS -D__SS_LONG
 LFLAGS=-lgc -lpcre $(LDFLAGS)
 
 all:	circuit_shedskin
@@ -7,8 +7,8 @@ all:	circuit_shedskin
 run:	all
 	./circuit_shedskin
 
-CPPFILES=circuit_shedskin.cpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/builtin.cpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/itertools.cpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/re.cpp
-HPPFILES=circuit_shedskin.hpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/builtin.hpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/itertools.hpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/re.hpp
+CPPFILES=/usr/local/lib/python2.6/dist-packages/shedskin/lib/sys.cpp circuit_shedskin.cpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/builtin.cpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/itertools.cpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/re.cpp
+HPPFILES=/usr/local/lib/python2.6/dist-packages/shedskin/lib/sys.hpp circuit_shedskin.hpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/builtin.hpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/itertools.hpp /usr/local/lib/python2.6/dist-packages/shedskin/lib/re.hpp
 
 circuit_shedskin:	$(CPPFILES) $(HPPFILES)
 	$(CC)  $(CCFLAGS) $(CPPFILES) $(LFLAGS) -o circuit_shedskin
